--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ ul {
     color: rgb(142, 211, 15);
     margin-left: 2vw;
     font-size: 2vw;
+    margin-top: 1vw;
 }
 
 h1 {
@@ -26,4 +27,10 @@ h1 {
     font-family: 'Roboto Mono', monospace;
     font-size: 5vw;
     margin-left: 2vw;
+}
+
+.logo {
+    margin-left: 0;
+    font-size: 3vw;
+    margin: 1vw;
 }
