--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ html {
     display: flex-block;
     width: 100vw;
     margin-left: 1vw;
+    color: white;
 }
 
 h1 {
@@ -136,3 +137,4 @@ img {
   }
 
 /* Login css */
+
